Insert nonmonotonic Do not use cycle list name=earthy Add time arrow on I(q)

--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -84,4 +84,11 @@
 	\label{fig:generations}%
 \end{figure}
 
+\begin{figure*}
+	\tikzsetnextfilename{nonmonotonic}
+	\input{fig_plis/nonmonotonic.pgf}%
+	\caption{Microstructure evolution. (a) Details of confocal images in fully adhesive conditions (left) and with no adhesion on top (right). Scale bar is \SI{10}{\micro\metre}. Arrows indicates the pore size. (b) Corresponding Fourier spectra in second situation and same times. Lines are fits by Eq.~\ref{eq:fractalS}. (c-d) Evolution of susceptibility and fractal dimension in both situations (black line and orange dashed line respectively). Symbols indicates the times of the images in (a).}%
+	\label{fig:nonmonotonic}%
+\end{figure*}
+
 \end{document}
